Red5 Changelog
==============

This file contains informations about the changes between the different
versions of Red5.

Red5 0.6    (unreleased)
------------------------
Bugfixes:
- ghost connection detection code rewritten to better detect dead clients
  (Jira APPSERVER-38, SN-37)


Red5 0.6rc3 (2007-04-11)
------------------------
New features:
- Keyframe informations are cached so files don't need to be reparsed
  before playback
- Connections from Flash Media Encoder and On2 Flix Live supported
- Access to shared objects can be limited (Jira APPSERVER-25)
- Connections can provide a list of remote addresses. This is usefull
  for proxied RTMPT connections.

Bugfixes:
- bandwidth control code has been rewritten to fix stability issues and
  memory leaking in high concurrency connection count situations
- serialization of Maps with non-number keys fixed (Jira APPSERVER-60)
- multiple IO processor threads are used by default
- memory leak when closing RTMPT connections fixed (Jira APPSERVER-61)
- merged WAR build script with primary script, also moved WAR specific
  startup servlet into trunk
- deserializing of remoting results fixed (Jira APPSERVER-63)
- fixed "error in object encoding" when rejecting AMF3 clients
  (Jira APPSERVER-73)
- concurrency problems when closing a connection fixed (Jira APPSERVER-59)
- unnecessary NetStream.Play.* events are no longer sent when playback
  stopped (Jira APPSERVER-70)
- SimplePlaylistController setRepeat and setRandom fixed (Jira SN-27)
- NPE in SimpleBWControlService fixed (Jira APPSERVER-75)
- reference bugs in AMF3 encoder fixed (Jira APPSERVER-81)
- "NetStream.Play.Failed" is sent correctly now (Jira APPSERVER-52)
- concurrency issue fixed in SimpleBWControlService (Jira SN-32)
- fixed problem when decoding MP3 files with signed values in the
  ID3v2 tag size (Jira APPSERVER-86)
- "NetStream.Seek.Failed" is sent when trying to seek in live streams
  (Jira APPSERVER-84)