@@ -9,6 +9,8 @@ Red5 0.6    (unreleased)
 Bugfixes:
 - ghost connection detection code rewritten to better detect dead clients
   (Jira APPSERVER-38, SN-37)
+- deserialization of objects defined in webapp classpath fixed
+  (Jira APPSERVER-80, APPSERVER-100)
 
 
 Red5 0.6rc3 (2007-04-11)
